# bloom-evm

./: .gitignore  Cargo.toml
blockchain/: Cargo.toml
blockchain/src/: blockchain.rs  lib.rs
chain-state/: Cargo.toml
chain-state/src/: bloom.conf  clap.yaml  config.rs  handler.rs  main.rs  query_service.rs  yaml_example.yaml
chainstate/: Cargo.toml
chainstate/src/: genesis.rs  handler.rs  main.rs
db/: Cargo.toml
db/src/: db.rs  keys.rs  lib.rs
evmshell/: Cargo.toml
evmshell/src/commands/: account_cmd.rs  mod.rs  state_cmd.rs
executer/: Cargo.toml
executer/src/: lib.rs
journaldb/: Cargo.toml
journaldb/src/: archivedb.rs  earlymergedb.rs  lib.rs  overlaydb.rs  overlayrecentdb.rs  refcounteddb.rs
keccak-hasher/: Cargo.toml
kvstorage/: Cargo.toml
kvstorage/src/: db.rs  lib.rs
main/: Cargo.toml
main/src/: handler.rs  main.rs
patricia-trie-ethereum/: Cargo.toml
patricia-trie-ethereum/src/: lib.rs
src/: executer.rs  main.rs  parser.rs
src/commands/: account_cmd.rs  call_message_cmd.rs  contract_cmd.rs  create_contract_cmd.rs  deposit_cmd.rs  example.rs  mod.rs  state_cmd.rs
state/: Cargo.toml
state/src/: account.rs  lib.rs  main.rs  state.rs
trie-db/: Cargo.toml
trie-db/src/: lib.rs
triestate/: Cargo.toml
triestate/src/: account.rs  account_db.rs  lib.rs  main.rs  state.rs
vm-shell/: Cargo.toml
vm-shell/src/commands/: mod.rs
