[package]
name = "evmbin"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"]}
docopt = "1.0"
evm = "0.16"
ethereum-types = "0.9.0"
hex = "0.3.1"
kvdb = "0.5.0"
kvdb-rocksdb = "0.7.0"
parity-bytes = "0.1"
rlp = "0.4"
rustc-hex = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sha3 = "0.8"
structopt = "0.3.8"
