[package]
name = "bloom-evm"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.0", features = ["derive"]}
docopt = "1.0"
evm = "0.16"
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
ethereum-types = "0.9.2"
hex = "0.3.1"
kvdb = "0.5.0"
parity-bytes = "0.1"
rlp = "0.4"
rustc-hex = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sha3 = "0.8"
structopt = "0.3.8"
bloom-state = {path = "state"}
journaldb = { path = "./journaldb" }
kvdb-rocksdb = "0.8.0"
trie-db = "0.18.0"
ethtrie = {package = "patricia-trie-ethereum", path = "./patricia-trie-ethereum"}

