[package]
name = "bloom-evm"
version = "0.1.0"
authors = ["Edwin Wang <lark930@gmail.com>"]
edition = "2018"

[[bin]]
name = "bloom-evm-shell"
path = "./src/main.rs"

[dependencies]
docopt = "1.0"
evm = "0.16"
primitive-types = { version = "0.7", default-features = false, features = ["rlp"] }
ethereum-types = "0.9.2"
hex = "0.3.1"
#rustc-hex = "2.1.0"
serde = { version = "1.0.101", features = ["derive"] }
sha3 = "0.8"
structopt = "0.3.8"
bloom-state = {path = "state"}
journaldb = { path = "./journaldb" }
kvdb-rocksdb = "0.7.0"
trie-db = "0.18.0"
ethtrie = {package = "patricia-trie-ethereum", path = "./patricia-trie-ethereum"}

evm-executer = {package = "executer", path = "./executer"}

bloom-db = {path = "./db"}

[build-dependencies.cc]
version = ">= 1.0.28, <= 1.0.41"