[package]
name = "bloom-blockchain"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bloom-db = {path = "../db"}
journaldb = { path = "../journaldb" }
common-types = { git = "https://github.com/recursive-bloom/common-types", branch = "master"}
ethereum-types = "0.9.0"
parking_lot = "0.10.0"
