[package]
name = "chain-state"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bloom-chain"
path = "./src/main.rs"

[dependencies]
protobuf = "2.16"
zmq = "0.9"
evm-executer = {package = "executer", path = "../executer"}
rlp = "0.4.4"
kvdb-rocksdb = "0.7.0"
common-types = { git = "https://github.com/recursive-bloom/common-types", branch = "master"}
bloom-db = {path = "../db"}
blockchain-db = {package = "bloom-blockchain", path = "../blockchain"}
kvdb = "0.5.0"
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
log = "0.4"
env_logger = "0.7"
serde = "1.0.97"
indexmap = { version = "1.0", optional = true }
toml = "0.5.6"
serde_derive = "1.0"
serde_json = "1.0"


[dev-dependencies]
ethereum-types = "0.9.0"
hex-literal = "0.2.1"



