[package]
name = "executer"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.0"
bloom-state = {path = "../state"}
evm = "0.16"
common-types = { git = "https://github.com/recursive-bloom/common-types", branch = "master"}

journaldb = { path = "../journaldb" }
kvdb = "0.5.0"
blockchain = {path = "../blockchain", package = "bloom-blockchain"}
bloom-db = {path = "../db"}
ethtrie = {package = "patricia-trie-ethereum", path = "../patricia-trie-ethereum"}
trie-db = "0.18.0"


[dev-dependencies]
kvdb-memorydb = "0.5.0"

[build-dependencies.cc]
version = ">= 1.0.28, <= 1.0.41"