[package]
name = "journaldb"
version = "0.2.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "A `HashDB` which can manage a short-term journal potentially containing many forks of mutually exclusive actions"
license = "GPL3"
edition = "2018"

[dependencies]
parity-bytes = "0.1"
ethereum-types = "0.8.0"
malloc_size_of = { version = "0.3.0", package = "parity-util-mem" }
memory-db = "0.18.0"
hash-db = "0.15.2"
keccak-hasher = { version = "0.1.1", path = "../keccak-hasher" }
kvdb = "0.3.1"
log = "0.4"
parking_lot = "0.9"
fastmap = { path = "../util/fastmap" }
rlp = "0.4.0"

[dev-dependencies]
env_logger = "0.5"
keccak-hash = "0.4.0"
kvdb-memorydb = "0.3.1"
