[package]
name = "bloom-db"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common-types = { git = "https://github.com/recursive-bloom/common-types", branch = "master"}
kvdb = "0.5.0"
ethereum-types = "0.9.0"
rlp = "0.4.4"
