[package]
name = "bloom-state"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.8.0"
trie-db = "0.20.1"
memory-db = "0.18.0"
hash-db = "0.15.2"
keccak-hasher = { version = "0.1.1", path = "../keccak-hasher" }
rlp = "0.4.4"
patricia-trie-ethereum = {path = "../patricia-trie-ethereum"}