[package]
name = "bloom-state"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-types = "0.9.2"
trie-db = "0.18.0"
memory-db = "0.21.0"
kvdb-rocksdb = "0.7.0"
hash-db = "0.15.2"
keccak-hasher = { version = "0.1.1", path = "../keccak-hasher" }
rlp = "0.4.4"
hex = "0.3.1"
ethtrie = {package = "patricia-trie-ethereum", path = "../patricia-trie-ethereum"}
hex-literal = "0.2"
journaldb = { path = "../journaldb" }
evm = "0.16"
keccak-hash = "0.5.0"
parity-bytes = "0.1"
kvdb = "0.5.0"

bloom-db = {path = "../db"}
clap = { version = "3.0.0-beta.1", features = ["yaml"] }
env_logger = "0.7"

