[package]
name = "bloom-trie-db"
version = "0.1.0"
authors = ["jackoiu8722 <jackliu8722@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cita_trie = "0.1.6"
rocksdb = {package="parity-rocksdb", version="0.5.0"}
ethereum-types = "0.8.0"
#kvdb-rocksdb = "0.7.0"


